cmake_minimum_required(VERSION 3.27)
project(SP_2023_24_Z)

set(CMAKE_CXX_STANDARD 17)

add_executable(SP_2023_24_Z main.cpp)
add_executable(lab01_1 Lab01/lab01_1.cpp)
add_executable(lab01_2 Lab01/lab01_2.cpp)
add_executable(lab01_3 Lab01/lab01_3.cpp)
add_executable(lab02_1 Lab02/lab02_1.cpp)
add_executable(lab02_2 Lab02/lab02_2.cpp)
add_executable(lab02_3 Lab02/lab02_3.cpp)
