cmake_minimum_required(VERSION 3.27)
project(SP_2023_24_Z)

set(CMAKE_CXX_STANDARD 17)

add_executable(SP_2023_24_Z main.cpp)
add_executable(lab01_1 Lab01/lab01_1.cpp)
add_executable(lab01_2 Lab01/lab01_2.cpp)
add_executable(lab01_3 Lab01/lab01_3.cpp)
add_executable(lab02_1 Lab02/lab02_1.cpp)
add_executable(lab02_2 Lab02/lab02_2.cpp)
add_executable(lab02_3 Lab02/lab02_3.cpp)
add_executable(lab03_1 Lab03/lab03_1.cpp)
add_executable(lab03_2 Lab03/lab03_2.cpp)
add_executable(lab03_3 Lab03/lab03_3.cpp)
add_executable(lab03_4 Lab03/lab03_4.cpp)
add_executable(lab04_1 Lab04/lab04_1.cpp)
add_executable(lab04_2 Lab04/lab04_2.cpp)
add_executable(lab04_3 Lab04/lab04_3.cpp)
add_executable(lab06_1 Lab06/lab06_1.cpp)
add_executable(lab06_2 Lab06/lab06_2.cpp)
add_executable(lab06_3 Lab06/lab06_3.cpp)
add_executable(fmt_1 FirstMidterm/fmt_1.cpp)
add_executable(fmt_2 FirstMidterm/fmt_2.cpp)
add_executable(fmt_3 FirstMidterm/fmt_3.cpp)
add_executable(fmt_4 FirstMidterm/fmt_4.cpp)
